tools/vz/pkg/internal/test/cluster/ingress-invalid-shape/cluster-snapshot/verrazzano-ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb/logs.txt
# Copyright (c) 2023, 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb ====
2022-06-03T03:38:26.637360Z	info	Istio iptables environment:
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_EXCLUDE_INTERFACES=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=
ISTIO_META_DNS_CAPTURE=
INVALID_DROP=

2022-06-03T03:38:26.637407Z	info	Istio iptables variables:
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=
INBOUND_PORTS_EXCLUDE=15090,15021,80,443,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBE_VIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false
DNS_CAPTURE=false
DROP_INVALID=false
CAPTURE_ALL_DNS=false
DNS_SERVERS=[],[]
OUTPUT_PATH=
NETWORK_NAMESPACE=
CNI_MODE=false
EXCLUDE_INTERFACES=

2022-06-03T03:38:26.637722Z	info	Writing following contents to rules file: /tmp/iptables-rules-1654227506637477965.txt1636380044
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
2022-06-03T03:38:26.637771Z	info	Running command: iptables-restore --noflush /tmp/iptables-rules-1654227506637477965.txt1636380044
2022-06-03T03:38:26.652459Z	info	Writing following contents to rules file: /tmp/ip6tables-rules-1654227506652403889.txt4256411082

2022-06-03T03:38:26.652498Z	info	Running command: ip6tables-restore --noflush /tmp/ip6tables-rules-1654227506652403889.txt4256411082
2022-06-03T03:38:26.661023Z	info	Running command: iptables-save 
2022-06-03T03:38:26.669816Z	info	Command output: 
# Generated by iptables-save v1.4.21 on Fri Jun  3 03:38:26 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s REDACTED-IP4-ADDRESS/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Fri Jun  3 03:38:26 2022

==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb ====
==== START logs for container controller of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb ====
-------------------------------------------------------------------------------
NGINX Ingress controller
  Release:       1.1.1-20220413170248-b60724ed1
  Build:         git-b60724ed1
  Repository:    https://github.com/verrazzano/ingress-nginx.git
  nginx version: nginx/1.19.9

-------------------------------------------------------------------------------

W0603 03:38:27.866646       7 client_config.go:615] Neither --kubeconfig nor --master was specified.  Using the inClusterConfig.  This might not work.
I0603 03:38:27.866915       7 main.go:223] "Creating API client" host="https://REDACTED-IP4-ADDRESS:443"
W0603 03:38:30.582293       7 main.go:264] Initial connection to the Kubernetes API server was retried 2 times.
I0603 03:38:30.582348       7 main.go:267] "Running in Kubernetes cluster" major="1" minor="22" git="v1.22.5" state="clean" commit="c999fea1e6dbf111d64000dfaaff45edaa4c34d2" platform="linux/amd64"
I0603 03:38:30.591413       7 main.go:86] "Valid default backend" service="ingress-nginx/ingress-controller-ingress-nginx-defaultbackend"
I0603 03:38:30.868880       7 main.go:104] "SSL fake certificate created" file="/etc/ingress-controller/ssl/default-fake-certificate.pem"
I0603 03:38:31.137628       7 nginx.go:255] "Starting NGINX Ingress controller"
I0603 03:38:31.209338       7 event.go:282] Event(v1.ObjectReference{Kind:"ConfigMap", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller", UID:"a1a9a279-b20b-4253-882d-b12b78778e41", APIVersion:"v1", ResourceVersion:"11145851", FieldPath:""}): type: 'Normal' reason: 'CREATE' ConfigMap ingress-nginx/ingress-controller-ingress-nginx-controller
I0603 03:38:32.339299       7 nginx.go:297] "Starting NGINX process"
I0603 03:38:32.339393       7 leaderelection.go:248] attempting to acquire leader lease ingress-nginx/ingress-controller-leader...
I0603 03:38:32.340302       7 controller.go:155] "Configuration changes detected, backend reload required"
I0603 03:38:32.366168       7 leaderelection.go:258] successfully acquired lease ingress-nginx/ingress-controller-leader
I0603 03:38:32.366293       7 status.go:84] "New leader elected" identity="ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb"
I0603 03:38:32.424602       7 controller.go:172] "Backend successfully reloaded"
I0603 03:38:32.424680       7 controller.go:183] "Initial sync, sleeping for 1 second"
I0603 03:38:32.424742       7 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb", UID:"0e2c27a5-bf97-47eb-ba4a-9bf83da7df58", APIVersion:"v1", ResourceVersion:"11145975", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
==== END logs for container controller of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb ====
2022-06-03T03:38:28.098160Z	info	FLAG: --concurrency="2"
2022-06-03T03:38:28.098195Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2022-06-03T03:38:28.098203Z	info	FLAG: --help="false"
2022-06-03T03:38:28.098207Z	info	FLAG: --log_as_json="false"
2022-06-03T03:38:28.098211Z	info	FLAG: --log_caller=""
2022-06-03T03:38:28.098249Z	info	FLAG: --log_output_level="default:info"
2022-06-03T03:38:28.098256Z	info	FLAG: --log_rotate=""
2022-06-03T03:38:28.098262Z	info	FLAG: --log_rotate_max_age="30"
2022-06-03T03:38:28.098266Z	info	FLAG: --log_rotate_max_backups="1000"
2022-06-03T03:38:28.098270Z	info	FLAG: --log_rotate_max_size="104857600"
2022-06-03T03:38:28.098274Z	info	FLAG: --log_stacktrace_level="default:none"
2022-06-03T03:38:28.098283Z	info	FLAG: --log_target="[stdout]"
2022-06-03T03:38:28.098290Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2022-06-03T03:38:28.098293Z	info	FLAG: --outlierLogPath=""
2022-06-03T03:38:28.098297Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2022-06-03T03:38:28.098300Z	info	FLAG: --proxyLogLevel="warning"
2022-06-03T03:38:28.098304Z	info	FLAG: --serviceCluster="istio-proxy"
2022-06-03T03:38:28.098307Z	info	FLAG: --stsPort="0"
2022-06-03T03:38:28.098311Z	info	FLAG: --templateFile=""
2022-06-03T03:38:28.098315Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2022-06-03T03:38:28.098330Z	info	FLAG: --vklog="0"
2022-06-03T03:38:28.098336Z	info	Version 1.13.2-f84f69d1028e874d568f2942c5bab5271fcdeda7-Clean
2022-06-03T03:38:28.098772Z	info	Proxy role	ips=[REDACTED-IP4-ADDRESS fe80::8886:88ff:fea3:9fca] type=sidecar id=ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb.ingress-nginx domain=ingress-nginx.svc.cluster.local
2022-06-03T03:38:28.098886Z	info	Apply proxy config from env {}

2022-06-03T03:38:28.100312Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
parentShutdownDuration: 60s
proxyAdminPort: 15000
serviceCluster: istio-proxy
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2022-06-03T03:38:28.100339Z	info	JWT policy is third-party-jwt
2022-06-03T03:38:28.123083Z	info	CA Endpoint istiod.istio-system.svc:15012, provider Citadel
2022-06-03T03:38:28.123169Z	info	Using CA istiod.istio-system.svc:15012 cert with certs: var/run/secrets/istio/root-cert.pem
2022-06-03T03:38:28.123169Z	info	Opening status port 15020
2022-06-03T03:38:28.123302Z	info	citadelclient	Citadel client using custom root cert: var/run/secrets/istio/root-cert.pem
2022-06-03T03:38:28.146466Z	info	ads	All caches have been synced up in 52.779968ms, marking server ready
2022-06-03T03:38:28.147008Z	info	sds	SDS server for workload certificates started, listening on "etc/istio/proxy/SDS"
2022-06-03T03:38:28.147052Z	info	xdsproxy	Initializing with upstream address "istiod.istio-system.svc:15012" and cluster "Kubernetes"
2022-06-03T03:38:28.147126Z	info	sds	Starting SDS grpc server
2022-06-03T03:38:28.147767Z	info	starting Http service at REDACTED-IP4-ADDRESS:15004
2022-06-03T03:38:28.149930Z	info	Pilot SAN: [istiod.istio-system.svc]
2022-06-03T03:38:28.152099Z	info	Starting proxy agent
2022-06-03T03:38:28.152179Z	info	Epoch 0 starting
2022-06-03T03:38:28.152203Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --drain-strategy immediate --parent-shutdown-time-s 60 --local-address-ip-version v4 --file-flush-interval-msec 1000 --disable-hot-restart --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --component-log-level misc:error --concurrency 2]
2022-06-03T03:38:28.371857Z	info	cache	generated new workload certificate	latency=224.968646ms ttl=23h59m59.628169318s
2022-06-03T03:38:28.371917Z	info	cache	Root cert has changed, start rotating root cert
2022-06-03T03:38:28.371942Z	info	ads	XDS: Incremental Pushing:0 ConnectedEndpoints:0 Version:
2022-06-03T03:38:28.372018Z	info	cache	returned workload trust anchor from cache	ttl=23h59m59.627985471s
2022-06-03T03:38:28.862348Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-06-03T03:38:29.143448Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb.ingress-nginx-1
2022-06-03T03:38:29.143579Z	info	cache	returned workload trust anchor from cache	ttl=23h59m58.856427916s
2022-06-03T03:38:29.143972Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb.ingress-nginx resources:1 size:2.0kB resource:ROOTCA
2022-06-03T03:38:29.183747Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb.ingress-nginx-2
2022-06-03T03:38:29.183884Z	info	cache	returned workload certificate from cache	ttl=23h59m58.816122243s
2022-06-03T03:38:29.184026Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb.ingress-nginx resources:1 size:9.2kB resource:default
2022-06-03T03:38:32.006728Z	info	Readiness succeeded in 3.911204669s
2022-06-03T03:38:32.007109Z	info	Envoy proxy is ready
2022-06-03T04:09:36.358246Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-06-03T04:38:35.548745Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-74bgb ====
